# bcx

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  deny.toml
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
crates/: README.md
crates/bcx-core/: Cargo.toml  README.md
crates/bcx-core/src/: error.rs  ids.rs  lib.rs
crates/bcx-crypto/: Cargo.toml  README.md
crates/bcx-crypto/src/: envelope.rs  error.rs  lib.rs
crates/bcx-model/: Cargo.toml  README.md
crates/bcx-model/src/: event.rs  lib.rs  statement.rs  truth.rs
crates/bcx-policy/: Cargo.toml  README.md
crates/bcx-policy/src/: lib.rs
crates/bcx-wire/: Cargo.toml  README.md
crates/bcx-wire/src/: lib.rs
docs/: CRATE_VERSION_MATRIX.md  IMPLEMENTATION_PLAN.md  VERSION_PLAN.md  modularity-policy.md  original-idea.md  protocol-family.md  security-controls.md  supply-chain-security.md  threat-model.md  toolchain-policy.md  unsafe-policy.md
domains/: README.md
integrations/: README.md
profiles/: README.md
proofs/: README.md
release-notes/: RELEASE_NOTES_0.1.0.md  RELEASE_NOTES_0.2.0.md  RELEASE_NOTES_0.3.0.md  RELEASE_NOTES_0.3.1.md  RELEASE_NOTES_0.4.0.md  RELEASE_NOTES_0.5.0.md
scripts/: checks.sh  finalize_release.py  record_pentest_report.py  release_0_1_gate.sh  release_0_2_gate.sh  release_0_3_gate.sh  release_crate.py  validate-crate-version-matrix.py  validate-latest-tools.sh  validate-modularity-policy.sh  validate-release-metadata.sh  validate-release-readiness.sh
security/pentest/: README.md  v0.1.0.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md
services/: README.md
src/: lib.rs
