[package]
name = "bcx-core"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Core no_std BCX identifiers, limits, and validation errors."
keywords = ["bcx", "no-std", "protocol"]
categories = ["no-std", "network-programming"]

[features]
default = []
alloc = []

[dependencies]
subtle.workspace = true
zeroize.workspace = true

[lints]
workspace = true
