[package]
name = "bcx-crypto"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Crypto-agile BCX envelope metadata and verifier traits."
keywords = ["bcx", "cryptography", "signature", "no-std"]
categories = ["cryptography", "no-std"]

[features]
default = []
alloc = []

[dependencies]
bcx-core = { version = "0.1.0", path = "../bcx-core", default-features = false }

[lints]
workspace = true
