[package]
name = "bcx-crypto"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "Crypto-agile BCX envelope metadata and verifier traits."
keywords = ["bcx", "cryptography", "signature", "no-std"]
categories = ["cryptography", "no-std"]

[features]
default = []
alloc = []

[dependencies]
bcx-core = { version = "0.3.0", path = "../bcx-core", default-features = false }
bcx-wire = { version = "0.3.0", path = "../bcx-wire", default-features = false }

[lints]
workspace = true
