[package]
name = "bcx-model"
version = "0.3.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "BCX causal operation model types."
keywords = ["bcx", "causal", "protocol", "no-std"]
categories = ["no-std", "network-programming"]

[features]
default = []
alloc = []

[dependencies]
bcx-core = { version = "0.3.0", path = "../bcx-core", default-features = false }
bcx-wire = { version = "0.3.0", path = "../bcx-wire", default-features = false }

[lints]
workspace = true
