[package]
name = "bcx-policy"
version = "0.3.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "BCX security profiles and disclosure policy primitives."
keywords = ["bcx", "policy", "security", "no-std"]
categories = ["no-std", "network-programming"]

[features]
default = []
alloc = []

[dependencies]

[lints]
workspace = true
