[package]
name = "bcx-wire"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
description = "BCX wire version and message limit primitives."
keywords = ["bcx", "wire", "protocol", "no-std"]
categories = ["encoding", "network-programming", "no-std"]

[features]
default = []
alloc = []

[dependencies]
bcx-core = { version = "0.1.0", path = "../bcx-core", default-features = false }

[lints]
workspace = true
