[package]
name = "bcx-wire"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
readme = "README.md"
description = "BCX wire version and message limit primitives."
keywords = ["bcx", "wire", "protocol", "no-std"]
categories = ["encoding", "network-programming", "no-std"]

[features]
default = []
alloc = []

[dependencies]
bcx-core = { version = "0.4.0", path = "../bcx-core", default-features = false }

[lints]
workspace = true
